[feat]: exposing /api/version

--- a/Admin/config-runtime.json
+++ b/Admin/config-runtime.json
@@ -28,9 +28,13 @@
       "type": "stateless",
       "services": [
         {
-          "className": "aDocumentationService"
+            "className": "aInsuranceWebService"
+        },
+        {   
+            
+            "className": "aDocumentationService"
         }
-      ]
+    ]
     },
     "stateful": {
       "type": "stateful",
