--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "install:bundle:ewamex": "node ./scripts/installBundle.js --location ./Bundle/wxwamadvancedcomponents --name wxwamadvancedcomponents",
     "test": "npm-run-all test:*",
     "devenv": "node ./scripts/launch_devenv.js",
-    "test:js": "node test.js"
+    "test:js": "node test.js",
+    "postinstall": "node postInstall.js",
+    "test:utf": "node ./scripts/call.js ewamconsole.exe /RUN:aUTF_Runner.ConsoleStart /RUNCONTEXTNAME:DefaultRunningContext"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@ewam/cli": "0.1.1",
     "@ewam/script.cli": "^1.0.5",
+    "newman": "^5.3.2",
     "npm-run-all": "^4.1.5"
   }
 }
